--- a/components/inputs/input.css
+++ b/components/inputs/input.css
@@ -2,11 +2,11 @@
     position: relative;
     padding: 20px 0 0;
     width: 100%;
-    max-width: 180px;
+    max-width: 350px;
 }
 
 .input-user-login {
-    font-family: inherit;
+    /* font-family: inherit; */
     width: 100%;
     border: none;
     border-bottom: 2px solid #9b9b9b;
@@ -40,9 +40,9 @@
 
 .input-user-login:focus {
     padding-bottom: 6px;
-    font-weight: 700;
+    /* font-weight: 700; */
     border-width: 3px;
-    border-image: linear-gradient(to right, #116399, #38caef);
+    border-color: #116399;
     border-image-slice: 1;
 }
 
@@ -53,7 +53,7 @@
     transition: 0.2s;
     font-size: 17px;
     color: #38caef;
-    font-weight: 700;
+    /* font-weight: 700; */
 }
 
 /* reset input */
